--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,6 +11,10 @@
     <noscript>
       <strong>We're sorry but Beno doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      {{ message }}
+    </div>
+    <script src="https://unpkg.com/vue"></script>
+    <script src="../src/main.js"></script>
   </body>
 </html>
